update retrofit apicall

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#EF8700</color>
     <color name="colorPrimaryDark">#F37022</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="background">#F66D1D</color>
 </resources>
